add main components to be able to make slides
- background
- text
- blend background with black when text is shown
- toggle text layer on and off

Struggled a bit with the transparent color, which is always the 1st color in the
palette. For the sprite pixel art this is easy as you can control the index of
the 1st color yourself. Backgrounds are less controllable when using
photos. There's probably an easy trick to swap out this color in pngs with say
Aseprite or ImageMagick, but I couldn't figure it out so quick. Regardless you
still need to find out which color is closest to black as that's the color you
need for the background as that color is the color that doesn't blend with the
background. The easiest way seems to be to just check the end result palette in
the mGBA pallette viewer and then use Grit to swap out the desirable transparent
index and the 1st index color with -pT<index>. Seems a bit hacky, and this means
you need to have Makefile be specific about every single BG, but it'll have to
do for now.

--- a/examples/slides/Makefile
+++ b/examples/slides/Makefile
@@ -12,11 +12,13 @@ CFLAGS = -O3 -mthumb --config armv4t-gba.cfg -Wl,-T,gba_cart.ld
 
 WYVERN_LEFT = assets/wyvern-left.png
 WYVERN_RIGHT = assets/wyvern-right.png
+GBA_CPU_BG = assets/gba-cpu.png
 WYVERN_LEFT_ASM = wyvern-left.s
 WYVERN_RIGHT_ASM = wyvern-right.s
+GBA_CPU_BG_ASM = gba-cpu.s
 
 C_FILES = $(NAME).c
-ASM_FILES = $(WYVERN_LEFT_ASM) $(WYVERN_RIGHT_ASM)
+ASM_FILES = $(WYVERN_LEFT_ASM) $(WYVERN_RIGHT_ASM) $(GBA_CPU_BG_ASM)
 
 $(NAME).gba: $(NAME).elf
 	$(BIN)/llvm-objcopy -O binary $^ $@
@@ -26,12 +28,15 @@ $(NAME).elf: $(C_FILES) $(ASM_FILES)
 	$(CC) -o $@ $^ $(CFLAGS) $(LFLAGS)
 
 $(WYVERN_LEFT_ASM): $(WYVERN_LEFT)
-	grit $^ -gB4 -Mw 8 -Mh 8 -gT 00FFFF -pS -o $*
+	grit $^ -gB4 -Mw 8 -Mh 8 -pS -o $*
 
 $(WYVERN_RIGHT_ASM): $(WYVERN_RIGHT)
-	grit $^ -gB4 -Mw 4 -Mh 8 -gT 00FFFF -pS -o $*
+	grit $^ -gB4 -Mw 4 -Mh 8 -pS -o $*
+
+$(GBA_CPU_BG_ASM): $(GBA_CPU_BG)
+	grit $^ -mR4 -gB4 -pn16 -o $* -pT8
 
 .PHONY: clean
 
 clean:
-	rm $(NAME).elf $(NAME).gba wyvern*
+	rm $(NAME).elf $(NAME).gba wyvern* gba-cpu*
