move the background and change sprite
- stop sprite moving when close to the edge of the screen and move the
  background instead, so we have somewhat normal movement behaviour
- change wyvern to pointer as using a flapping wyvern as a pointer becomes
  annoying quickly

--- a/examples/slides/Makefile
+++ b/examples/slides/Makefile
@@ -10,15 +10,15 @@ GBAFIX = $(BIN)/gbafix
 LFLAGS = -ltonc
 CFLAGS = -O3 -mthumb --config armv4t-gba.cfg -Wl,-T,gba_cart.ld
 
-WYVERN_LEFT = assets/wyvern-left.png
-WYVERN_RIGHT = assets/wyvern-right.png
+POINTER_LEFT = assets/pointer-left.png assets/wyvern-left.png
+POINTER_RIGHT = assets/pointer-right.png assets/wyvern-right.png
 GBA_CPU_BG = assets/gba-cpu.png
-WYVERN_LEFT_ASM = wyvern-left.s
-WYVERN_RIGHT_ASM = wyvern-right.s
+POINTER_LEFT_ASM = pointer-left.s
+POINTER_RIGHT_ASM = pointer-right.s
 GBA_CPU_BG_ASM = gba-cpu.s
 
 C_FILES = $(NAME).c
-ASM_FILES = $(WYVERN_LEFT_ASM) $(WYVERN_RIGHT_ASM) $(GBA_CPU_BG_ASM)
+ASM_FILES = $(POINTER_LEFT_ASM) $(POINTER_RIGHT_ASM) $(GBA_CPU_BG_ASM)
 
 $(NAME).gba: $(NAME).elf
 	$(BIN)/llvm-objcopy -O binary $^ $@
@@ -27,11 +27,11 @@ $(NAME).gba: $(NAME).elf
 $(NAME).elf: $(C_FILES) $(ASM_FILES)
 	$(CC) -o $@ $^ $(CFLAGS) $(LFLAGS)
 
-$(WYVERN_LEFT_ASM): $(WYVERN_LEFT)
-	grit $^ -gB4 -Mw 8 -Mh 8 -pS -o $*
+$(POINTER_LEFT_ASM): $(POINTER_LEFT)
+	grit $^ -gB4 -Mw 8 -Mh 8 -pS -o pointer-left -fa -pT1
 
-$(WYVERN_RIGHT_ASM): $(WYVERN_RIGHT)
-	grit $^ -gB4 -Mw 4 -Mh 8 -pS -o $*
+$(POINTER_RIGHT_ASM): $(POINTER_RIGHT)
+	grit $^ -gB4 -Mw 4 -Mh 8 -pS -o pointer-right -fa
 
 $(GBA_CPU_BG_ASM): $(GBA_CPU_BG)
 	grit $^ -mR4 -gB4 -pn16 -o $* -pT8
@@ -39,4 +39,4 @@ $(GBA_CPU_BG_ASM): $(GBA_CPU_BG)
 .PHONY: clean
 
 clean:
-	rm $(NAME).elf $(NAME).gba wyvern* gba-cpu*
+	rm $(NAME).elf $(NAME).gba pointer*  gba-cpu*
