[slides] add coremark background asset

--- a/examples/slides/Makefile
+++ b/examples/slides/Makefile
@@ -12,13 +12,17 @@ CFLAGS = -O3 -mthumb --config armv4t-gba.cfg -Wl,-T,gba_cart.ld
 
 POINTER_LEFT = assets/pointer-left.png assets/wyvern-left.png
 POINTER_RIGHT = assets/pointer-right.png assets/wyvern-right.png
-GBA_CPU_BG = assets/gba-cpu.png
 POINTER_LEFT_ASM = pointer-left.s
 POINTER_RIGHT_ASM = pointer-right.s
+
+GBA_CPU_BG = assets/gba-cpu.png
 GBA_CPU_BG_ASM = gba-cpu.s
+COREMARK_BG = assets/coremark.png
+COREMARK_BG_ASM = coremark.s
+
 
 C_FILES = $(NAME).c
-ASM_FILES = $(POINTER_LEFT_ASM) $(POINTER_RIGHT_ASM) $(GBA_CPU_BG_ASM)
+ASM_FILES = $(POINTER_LEFT_ASM) $(POINTER_RIGHT_ASM) $(GBA_CPU_BG_ASM) $(COREMARK_BG_ASM)
 
 $(NAME).gba: $(NAME).elf
 	$(BIN)/llvm-objcopy -O binary $^ $@
@@ -36,7 +40,10 @@ $(POINTER_RIGHT_ASM): $(POINTER_RIGHT)
 $(GBA_CPU_BG_ASM): $(GBA_CPU_BG)
 	grit $^ -mR4 -gB4 -pn16 -o $* -pT8
 
+$(COREMARK_BG_ASM): $(COREMARK_BG)
+	grit $^ -mR4 -gB4 -pn16 -o $*
+
 .PHONY: clean
 
 clean:
-	rm $(NAME).elf $(NAME).gba pointer*  gba-cpu*
+	rm $(NAME).elf $(NAME).gba *.h *.s
