[slides] handle iterating through backgrounds and slides
..and refactor a bit to make things neater

now holding L will allow to manipulate sprite (moving, changing sprite), while
pressing left-right / up-down will move between slides and backgrounds
respectively.

Also, turns out memcpy16() and memcpy32()'s last parameter is unit amount
instead of total bytes, so fixed that as well.

--- a/examples/slides/Makefile
+++ b/examples/slides/Makefile
@@ -46,4 +46,4 @@ $(COREMARK_BG_ASM): $(COREMARK_BG)
 .PHONY: clean
 
 clean:
-	rm $(NAME).elf $(NAME).gba *.h *.s
+	rm $(NAME).elf $(NAME).gba pointer*  gba-cpu* coremark*
