make sure top-level LLVM_TOOLCHAIN_LIBRARY_VARIANTS is in scope
.. for BMT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -161,7 +161,7 @@ endif()
 
 set(CPACK_SYSTEM_NAME "${CMAKE_SYSTEM_NAME}-${processor_name}")
 
-set(LLVM_TOOLCHAIN_LIBRARY_VARIANTS armv4t)
+set(LLVM_TOOLCHAIN_LIBRARY_VARIANTS ON CACHE INTERNAL armv4t)
 
 set(LLVM_ENABLE_PROJECTS clang;lld;lldb CACHE STRING "")
 set(LLDB_ENABLE_LIBXML2 ON CACHE INTERNAL "")
