add -D_LIBCPP_AVAILABILITY_HAS_NO_VERBOSE_ABORT to armv4t-gba.cfg
It's an obscure feature, so let's not let everyone break their build and not
understand why.

--- a/common/armv4t-gba.cfg
+++ b/common/armv4t-gba.cfg
@@ -1,5 +1,6 @@
---target=armv4t-none-eabi -march=armv4t
+--target=armv4t-none-eabi -mcpu=arm7tdmi
 -fno-exceptions
 -fno-rtti
 --sysroot <CFGDIR>/../lib/clang-runtimes/arm-none-eabi/armv4t
 <CFGDIR>/../lib/clang-runtimes/arm-none-eabi/armv4t/lib/gba_crt0.o
+-D_LIBCPP_AVAILABILITY_HAS_NO_VERBOSE_ABORT
